yeni deyisim olub

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
   </section>
   <section class="sections section4" id="afeatures">
-<div class="sec">
+<div class="sec seccc">
             <h1 class="sec11 sec1">Aditional </h1>
             <h1 class="sec11 sec2">Functions</h1>
         </div>
@@ -134,7 +134,7 @@
 
   </section>
   <section id="faq" class="sections section5">
-    <div class="sec">
+    <div class="sec seccc">
              <h1 class="sec11 sec2">FAQ</h1>
             <h1 class="sec11 sec1 sec111">(Frequently Asked Questions) </h1>
         </div>
