telefon ucun deyisim elave+

--- a/amr.html
+++ b/amr.html
@@ -19,7 +19,7 @@
 <section class="cur-section">
        <h2 class="cur-title bmr-titl">AMR Calculator</h2>
 <div class="elements">
-    <div class="element element1">
+    <div class="element element1 elm1">
       
    <input class="bmr-inp bmr1 bmr111 amr2" type="number" min="0" placeholder="Enter Your Weight(KG)" >
 
